src/objects/pprimer__PP_Numbers__c.object
<CustomObject>
    <fields>
        <fullName>pprimer__PP_Checkbox11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP Checkbox11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pprimer__PP_Checkbox12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP Checkbox12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pprimer__PP_Checkbox13__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP Checkbox13</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pprimer__PP_Company_Pass_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Pass Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pprimer__PP_Id_User__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pprimer__PP_Personal_Pass_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Personal Pass Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pprimer__PP_Support_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Support Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>PP_Numbers</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>PP_Numbers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PP_Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>